[gd_scene load_steps=5 format=3 uid="uid://der6t6sqo4u0o"]

[ext_resource type="PackedScene" uid="uid://c012adynymsqp" path="res://scenes/ui/menu/settings_menu/types_of_settings_menu/base/abstract_settings_menu.tscn" id="1_4vgjh"]
[ext_resource type="Script" path="res://scripts/ui/menu/settings_menu/types_of_settings_menu/audio_settings_menu.gd" id="2_iak2i"]
[ext_resource type="PackedScene" uid="uid://chbkkj3m2qli6" path="res://scenes/ui/menu/settings_menu/settings_elements/h_slider_setting_menu.tscn" id="3_rxpdh"]
[ext_resource type="PackedScene" uid="uid://bfwfo3q1hm38e" path="res://scenes/ui/menu/settings_menu/settings_elements/check_button_setting_menu.tscn" id="4_odpes"]

[node name="AudioSettingsMenu" instance=ExtResource("1_4vgjh")]
script = ExtResource("2_iak2i")
settings_group_name = "AUDIO"

[node name="GeneralVolume" parent="Settings" index="0" instance=ExtResource("3_rxpdh")]
layout_mode = 2
setting_name = "GENERAL_VOLUME"
setting_tooltip = " "

[node name="MusicVolume" parent="Settings" index="1" instance=ExtResource("3_rxpdh")]
layout_mode = 2
setting_name = "MUSIC_VOLUM"
setting_tooltip = " "

[node name="SoundVolume" parent="Settings" index="2" instance=ExtResource("3_rxpdh")]
layout_mode = 2
setting_name = "SOUND_VOLUME"
setting_tooltip = " "

[node name="PlayMusicOnPause" parent="Settings" index="3" instance=ExtResource("4_odpes")]
layout_mode = 2
setting_name = "PLAY_MUSIC_ON_PAUSE"
